[B]Version 1.1.45[/B]

javmoe - fix bug in listing